fix(widget): fix spacing between ranking and elo

--- a/widget/src/styles/themes/normal.less
+++ b/widget/src/styles/themes/normal.less
@@ -125,6 +125,10 @@
                 margin-right: 0rem;
               }
             }
+
+            .ranking {
+              margin-right: 0.2rem;
+            }
           }
 
           .username-hidden {
