--- a/widget/src/styles/themes/rounded.less
+++ b/widget/src/styles/themes/rounded.less
@@ -78,6 +78,7 @@
 
           &.username-hidden {
             font-size: 1em;
+            color: var(--text);
 
             .ranking {
               font-weight: bold;
